...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/log_list_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/log_list_message"
            tools:text="Message Placeholder" />

        <TextView
            android:id="@+id/log_list_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/log_list_date"
            tools:text="Date Placeholder" />
    </LinearLayout>
</LinearLayout>
...
